Update jvm_args.md